updated by souptik

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -32,17 +32,17 @@
 -->
 
     <ion-list class="menus">
-      <!--  <button menuClose [class.active]="active" ion-item *ngFor="let p of pages" (click)="openPage(p)">
+       <button menuClose [class.active]="active" ion-item *ngFor="let p of pages" (click)="openPage(p)">
 
        
         <span class="menu-name">{{p.title}}</span>
-      </button> -->
+      </button>
 
-      <button menuClose [class.active]="active" ion-item *ngFor="let i of influencer" (click)="openPage(i)">
+      <!-- <button menuClose [class.active]="active" ion-item *ngFor="let i of influencer" (click)="openPage(i)">
 
 
         <span class="menu-name">{{i.title}}</span>
-      </button>
+      </button> -->
     </ion-list>
 
   </ion-content>
