--- a/src/pages/advertiser-forgot-password/advertiser-forgot-password.scss
+++ b/src/pages/advertiser-forgot-password/advertiser-forgot-password.scss
@@ -5,7 +5,7 @@ page-advertiser-forgot-password {
     .logo-wrap {
         background: linear-gradient(to right, #e52d27 0%, #b31217 100%) !important;
         background-color: #e52d27;
-        height: 45%;
+        height: 45vh;
         position: relative;
         display: flex;
         align-items: start;
@@ -21,30 +21,35 @@ page-advertiser-forgot-password {
             }
         }
         .logo {
-            width: 70%;
+            width: 64%;
+            max-width: 300px;
             text-align: center;
             display: block;
-            margin: 25px auto 20px;
+            margin: 5vh auto 20px;
             img {
                 max-width: 100%;
             }
         }
     }
     .button-box {
-        border-radius: 0;
         position: absolute;
         width: 100%;
         background-color: transparent;
-        height: auto;
-        top: 17%;
+        height: 89vh;
+        top: 17vh;
         left: 50%;
         transform: translateX(-50%);
         padding: 0px 16px;
         margin-bottom: 16px;
         .box-wrap {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
             border-radius: 7px;
             padding-top: 16px;
+            padding-bottom: 5px;
             width: 100%;
+            min-height: 50rem;
             height: 100%;
             background-color: #fff;
             -webkit-box-shadow: 0px 0px 8px 1px rgba(190, 24, 27, 0.5);
@@ -81,17 +86,21 @@ page-advertiser-forgot-password {
     .list-ios {
         margin: -1px 0 16px;
     }
-    .item-label-floating .input-wrapper .input {
-        padding-right: 30px;
-        margin-right: 0;
-        position: relative;
-        &::before {
-            content: "";
-            position: absolute;
-            top: 9px;
-            right: 0;
-            width: 25px;
-            height: 20px;
+    .item-label-floating {
+        max-width: 700px;
+        margin: 0 auto;
+        .input-wrapper .input {
+            padding-right: 30px;
+            margin-right: 0;
+            position: relative;
+            &::before {
+                content: "";
+                position: absolute;
+                top: 9px;
+                right: 0;
+                width: 25px;
+                height: 20px;
+            }
         }
     }
     .otp_btn {
@@ -102,15 +111,21 @@ page-advertiser-forgot-password {
         margin-top: 15px;
         margin-bottom: 15px;
     }
-    .otp_number ion-col input[type="text"] {
-        border-bottom: 1px solid $dark-red;
-        text-align: center;
-        color: $dark-red;
-        font-weight: bold;
-        padding-bottom: 5px;
-        width: 100%;
-        margin-left: 0;
-        margin-right: 0;
+    .otp_number {
+        justify-content: center;
+        ion-col {
+            max-width: 50px;
+            input[type="text"] {
+                border-bottom: 1px solid $dark-red;
+                text-align: center;
+                color: $dark-red;
+                font-weight: bold;
+                padding-bottom: 5px;
+                width: 100%;
+                margin-left: 0;
+                margin-right: 0;
+            }
+        }
     }
     .al_reg_login {
         color: #cb2e31;
