--- a/src/pages/avdertiser-change-password/avdertiser-change-password.scss
+++ b/src/pages/avdertiser-change-password/avdertiser-change-password.scss
@@ -5,7 +5,7 @@ page-avdertiser-change-password {
     .top-wrap {
         background: linear-gradient(to right, #bd3f32 0%, #7c193d 100%) !important;
         background-color: #bd3f32;
-        height: 25%;
+        height: 16rem;
         position: relative;
         display: flex;
         align-items: start;
@@ -111,8 +111,9 @@ page-avdertiser-change-password {
         padding: 0px 30px;
         margin-top: 80px;
         .box-wrap {
-            .done_row { margin-top: 45px;}
-
+            .done_row {
+                margin-top: 45px;
+            }
             .item-md,
             .item-ios {
                 padding-right: 16px;
@@ -120,9 +121,18 @@ page-avdertiser-change-password {
             .list-ios {
                 margin: -1px 0 16px;
             }
-
-            .item-label-floating .input-wrapper .input.new_password { padding-right: 30px; margin-right: 0; position: relative;
-                &::before { content: ""; position: absolute; top: 9px; right: 0; width: 25px; height: 20px; }
+            .item-label-floating .input-wrapper .input.new_password {
+                padding-right: 30px;
+                margin-right: 0;
+                position: relative;
+                &::before {
+                    content: "";
+                    position: absolute;
+                    top: 9px;
+                    right: 0;
+                    width: 25px;
+                    height: 20px;
+                }
             }
             .item-label-floating .input-wrapper .input.new_password[type="password"] {
                 &::before {
