--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -62,6 +62,9 @@
 
 /* fonts  */
 
+
+ion-navbar .bar-button { margin: 0 1rem 0 0 !important;}
+
 header .title,
 footer,
 .content {
@@ -87,6 +90,7 @@ button,
     width: 100%;
     background-color: $mainbtn;
     color: #fff;
+    max-width: 300px;
 }
 
 .round-btn {
@@ -94,6 +98,7 @@ button,
     background-color: #ffffff;
     color: $mainbtn;
     border: 2px solid $mainbtn;
+    max-width: 300px;
 }
 
 .alert-btn {
@@ -105,11 +110,13 @@ button,
     color: $mainbtn;
     border-radius: 30px;
     border: 2px solid $mainbtn;
+    max-width: 300px;
 }
 
 .fb-btn {
     width: 100%;
     color: #fff;
+    max-width: 300px;
 }
 
 .mb-10 {
@@ -130,15 +137,16 @@ ion-navbar .toolbar-background {
         font-size: 1.7rem;
         color: #fff;
     }
-    .bar-button .icon,
-    .material-icons {
+    .bar-button{ margin: 0 1rem;
+        .icon, .material-icons {
         color: #fff;
         font-size: 1.6em;
         padding: 0px 3px;
-    }
-    img {
-        max-width: 3.8vmax;
-        padding: 0px 0.1em;
+        }
+        img {
+            max-width: 2.8rem;
+            padding: 0px 0.1em;
+        }
     }
 }
 
