--- a/src/pages/chat/chat.scss
+++ b/src/pages/chat/chat.scss
@@ -22,6 +22,7 @@ page-chat {
                 -webkit-box-shadow: 0px 1px 2px -1px rgba(0, 0, 0, 0.4);
                 -moz-box-shadow: 0px 1px 2px -1px rgba(0, 0, 0, 0.4);
                 box-shadow: 0px 1px 2px -1px rgba(0, 0, 0, 0.4);
+                clear: both;
             }
             .message-left {
                 max-width: 70%;
