--- a/src/pages/review/review.scss
+++ b/src/pages/review/review.scss
@@ -1,6 +1,8 @@
 page-review {
     .scroll-content {
         background-color: #f4f4f4;
+
+        .review_box {margin: 20px 30px;}
     }
     .cont-box {
         margin: 0px 0px;
